--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>2.1.1</version>
         </dependency>
 
+        <!--Spring Security和thymeleaf的整合依赖-->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
